=> Fixed issue with h2's not aligning properly due to css quirk.

--- a/javascript/photo_gallery/photo-gallery.css
+++ b/javascript/photo_gallery/photo-gallery.css
@@ -19,7 +19,7 @@
 @media screen and (max-width: 600px) {
     .jLastic{
         width: 60% !important;
-        /* position:relative; */
+        position:relative;
         margin: auto;
         overflow:visible;
     }
